<resources>
    <string name="app_name">Firebase</string>
    <string name="log_in">Log in</string>
    <string name="cadastro">Cadastro</string>
    <string name="log_in_button_2">Log in</string>
    <string name="password_edit_text">senha</string>
    <string name="e_mail_edit_text">e-mail</string>
    <string name="log_in_title">Log in</string>
    <string name="repetir_senha_edit_text">repetir senha</string>
    <string name="cadastro_titke">Cadastro</string>
    <string name="cadastrar_button_2">Cadastrar</string>
    <string name="log_in_button">Log in</string>
    <string name="telefone_edit_Text">telefone</string>
    <string name="nome_edit_text">nome</string>
    <string name="list_users">Listar todos os usuários</string>
    <string name="list_title">Lista de usuários</string>
    <string name="signout_button">Sair</string>
</resources>